# open-sample-manager

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.local/: PR_DRAFT.md
.local/manual-verify/: README.md  playwright_drag_test.mjs
core/: AGENTS.md  Cargo.toml
core/src/: lib.rs  manager.rs
core/src/analysis/: AGENTS.md  bpm.rs  classifier.rs  decoder.rs  fft_utils.rs  kick.rs  loop_classifier.rs  midi.rs  mod.rs  onset.rs
core/src/db/: mod.rs  operations.rs  schema.rs
core/src/db/operations/: instrument_types.rs  midi.rs  mod.rs  samples.rs  types.rs
core/src/embedding/: mod.rs
core/src/ffi/: functions.rs  handle.rs  mod.rs
core/src/manager/: analyze.rs  audio.rs  midi.rs  mod.rs  scan.rs  tests.rs
core/src/scanner/: mod.rs
core/src/search/: mod.rs
core/src/threading/: mod.rs
core/tests/: integration_test.rs  midi_pipeline_test.rs  update_classification_by_id.rs
core/tests/fixtures/: README.md
docs/: design_docs_updated.md  detailpanel-layout-and-path-fix.md
docs/moc/: open-sample-manager.jsx
plugin/: CMakeLists.txt
scripts/: bootstrap.sh  manual_capture.sh  manual_verify_drag.sh
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
ui/.local/manual-verify/: playwright_drag_test.mjs
ui/playwright/: README.md
ui/src/: App.tsx  global.d.ts
ui/src/components/: index.ts
ui/src/data/: mockSamples.ts
ui/src/hooks/: useKeyboardShortcuts.ts  useMidiState.ts  useSampleState.ts  useScanState.ts  useUIState.ts
ui/src/store/: useSettingsStore.ts
ui/src/styles/: global.css
ui/src/test/: midi-ui.test.tsx  placeholder.test.ts  setup.ts
ui/src/types/: midi.ts  sample.ts  scan.ts  tauri.ts
ui/src/utils/: AGENTS.md  audioCache.ts  dataTransfer.ts  handleImportPaths.test.ts  handleImportPaths.ts  (+4 more)
(+26 files in other folders)
