[package]
name = "open-sample-manager-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "flac", "wav", "ogg"] }
rustfft = "6.4"
realfft = "3.3"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.10"
