[package]
name = "open-sample-manager"
version = "0.1.0"
edition = "2021"
description = "Open Sample Manager - A standalone application for managing audio samples"
authors = ["Open Sample Manager Team"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
open-sample-manager-core = { path = "../core" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
